feat: update data entries and rate engine calculation for booking